[workspace]
members = ["rsmg-core", "test"]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Alfitra Heydar Achsan achsanalfitra@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/achsanalfitra/rsmg-dsa"
homepage = "https://github.com/achsanalfitra/rsmg-dsa"

[workspace.dependencies]
rsmg-core = { path = "rsmg-core" }
